--- a/app/src/main/res/layout/view_customer_deadinfoother.xml
+++ b/app/src/main/res/layout/view_customer_deadinfoother.xml
@@ -2,19 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <TextView
         style="@style/customer_detail_titleTextStyle"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/dimen_80dp"
         android:text="治丧信息" />
-
-    <View
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/gray_common" />
-
+        android:layout_height="@dimen/dimen_1dp"
+        android:layout_marginLeft="@dimen/dimen_32dp"
+        android:background="@color/zhy_line_3" />
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -23,14 +23,14 @@
         <TextView
             style="@style/customer_detail_title2TextStyle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/dimen_48dp"
             android:text="去世时间：" />
 
         <TextView
             android:id="@+id/tv_deadtime"
             style="@style/customer_detail_contentTextStyle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="@dimen/dimen_48dp" />
     </LinearLayout>
 
 
@@ -42,14 +42,14 @@
         <TextView
             style="@style/customer_detail_title2TextStyle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/dimen_48dp"
             android:text="去世地址：" />
 
         <TextView
             android:id="@+id/tv_deadlocation"
             style="@style/customer_detail_contentTextStyle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="@dimen/dimen_48dp" />
     </LinearLayout>
 
 
@@ -61,14 +61,14 @@
         <TextView
             style="@style/customer_detail_title2TextStyle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/dimen_48dp"
             android:text="治丧地址：" />
 
         <TextView
             android:id="@+id/tv_zslocation"
             style="@style/customer_detail_contentTextStyle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="@dimen/dimen_48dp" />
     </LinearLayout>
 
 
@@ -80,14 +80,14 @@
         <TextView
             style="@style/customer_detail_title2TextStyle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/dimen_48dp"
             android:text="殡仪馆地址：" />
 
         <TextView
             android:id="@+id/tv_funerallocation"
             style="@style/customer_detail_contentTextStyle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="@dimen/dimen_48dp" />
     </LinearLayout>
 
 
@@ -99,14 +99,14 @@
         <TextView
             style="@style/customer_detail_title2TextStyle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/dimen_48dp"
             android:text="出殡时间：" />
 
         <TextView
             android:id="@+id/tv_funeraltime"
             style="@style/customer_detail_contentTextStyle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="@dimen/dimen_48dp" />
     </LinearLayout>
 
 
@@ -118,14 +118,14 @@
         <TextView
             style="@style/customer_detail_title2TextStyle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/dimen_48dp"
             android:text="预计火化时间：" />
 
         <TextView
             android:id="@+id/tv_firetime"
             style="@style/customer_detail_contentTextStyle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="@dimen/dimen_48dp" />
     </LinearLayout>
 
 
@@ -137,14 +137,14 @@
         <TextView
             style="@style/customer_detail_title2TextStyle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/dimen_48dp"
             android:text="火化炉：" />
 
         <TextView
             android:id="@+id/tv_crematorname"
             style="@style/customer_detail_contentTextStyle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="@dimen/dimen_48dp" />
     </LinearLayout>
 
     <LinearLayout
@@ -155,14 +155,14 @@
         <TextView
             style="@style/customer_detail_title2TextStyle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/dimen_48dp"
             android:text="服务窗口：" />
 
         <TextView
             android:id="@+id/tv_windowservice"
             style="@style/customer_detail_contentTextStyle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="@dimen/dimen_48dp" />
     </LinearLayout>
 
     <LinearLayout
@@ -173,14 +173,14 @@
         <TextView
             style="@style/customer_detail_title2TextStyle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/dimen_48dp"
             android:text="遗体停放：" />
 
         <TextView
             android:id="@+id/tv_bodiespark"
             style="@style/customer_detail_contentTextStyle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="@dimen/dimen_48dp" />
     </LinearLayout>
 
     <LinearLayout
@@ -191,14 +191,14 @@
         <TextView
             style="@style/customer_detail_title2TextStyle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/dimen_48dp"
             android:text="遗体告别时间：" />
 
         <TextView
             android:id="@+id/tv_bodiesbyetime"
             style="@style/customer_detail_contentTextStyle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="@dimen/dimen_48dp" />
     </LinearLayout>
 
     <LinearLayout
@@ -209,22 +209,19 @@
         <TextView
             style="@style/customer_detail_title2TextStyle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/dimen_48dp"
             android:text="骨灰处理：" />
 
         <TextView
             android:id="@+id/tv_asldeal"
             style="@style/customer_detail_contentTextStyle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="@dimen/dimen_48dp" />
     </LinearLayout>
 
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:layout_marginLeft="@dimen/dimen_25dp"
-        android:layout_marginRight="@dimen/dimen_25dp"
-        android:background="@color/gray_common" />
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dimen_24dp" />
 </LinearLayout>
