--- a/app/src/main/res/layout/activity_editorder.xml
+++ b/app/src/main/res/layout/activity_editorder.xml
@@ -1,126 +1,138 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/main_blackground"
-    android:scrollbars="none">
+    android:background="@color/zhy_backgroud_1">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <RelativeLayout
-            android:id="@+id/rl_top"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingRight="10dp"
-            android:paddingTop="10dp"
-            android:visibility="gone">
-
-            <TextView
-                android:id="@+id/tv_customerdetail"
-                style="@style/orderlist_item_btn_textStyle"
-                android:layout_width="@dimen/dimen_200dp"
-                android:layout_height="@dimen/dimen_60dp"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_margin="@dimen/dimen_10dp"
-                android:drawableLeft="@drawable/ic_x_kfxq"
-                android:text="客户详情"
-                android:visibility="gone" />
-        </RelativeLayout>
-
-
-        <com.shian.shianlife.common.view.editor.MainSetmealOtherView
-            android:id="@+id/msvother"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="@dimen/dimen_30dp"></com.shian.shianlife.common.view.editor.MainSetmealOtherView>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dimen_20dp"
-            android:background="@color/zhy_line_3" />
-
-        <com.shian.shianlife.common.view.editor.MainSetmealView
-            android:id="@+id/msv"
-            android:visibility="gone"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="@dimen/dimen_20dp"
-            android:layout_marginRight="@dimen/dimen_20dp"
-            android:layout_marginTop="@dimen/dimen_10dp"
-            />
-
-        <com.shian.shianlife.common.view.editor.FuneralSetmealView
-            android:id="@+id/fsv"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="@dimen/dimen_20dp"
-            android:layout_marginRight="@dimen/dimen_20dp"
-            android:layout_marginTop="@dimen/dimen_40dp" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dimen_20dp"
-            android:background="@color/zhy_line_3" />
-
-        <com.shian.shianlife.common.view.editor.CemeterySetmealView
-            android:id="@+id/csv"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="@dimen/dimen_20dp"
-            android:layout_marginRight="@dimen/dimen_20dp"
-            android:layout_marginTop="@dimen/dimen_40dp"
-            android:visibility="gone" />
-
-        <com.shian.shianlife.common.view.order.AddedSetmealView
-            android:id="@+id/asv"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="@dimen/dimen_20dp"
-            android:layout_marginRight="@dimen/dimen_20dp"
-            android:layout_marginTop="@dimen/dimen_40dp" />
+        android:background="@color/zhy_backgroud_1"
+        android:scrollbars="none">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="@dimen/dimen_25dp"
-            android:layout_marginTop="@dimen/dimen_35dp"
-            android:gravity="right"
-            android:orientation="horizontal">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <RelativeLayout
+                android:id="@+id/rl_top"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingRight="10dp"
+                android:paddingTop="10dp"
+                android:visibility="gone">
+
+                <TextView
+                    android:id="@+id/tv_customerdetail"
+                    style="@style/orderlist_item_btn_textStyle"
+                    android:layout_width="@dimen/dimen_200dp"
+                    android:layout_height="@dimen/dimen_60dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_margin="@dimen/dimen_10dp"
+                    android:drawableLeft="@drawable/ic_x_kfxq"
+                    android:text="客户详情"
+                    android:visibility="gone" />
+            </RelativeLayout>
+
+
+            <com.shian.shianlife.common.view.editor.MainSetmealOtherView
+                android:id="@+id/msvother"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"></com.shian.shianlife.common.view.editor.MainSetmealOtherView>
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:text="合计:"
-                android:textColor="@color/red"
-                android:textSize="@dimen/txtsize_42sp" />
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_20dp"
+                android:background="@color/zhy_backgroud_1" />
+
+            <com.shian.shianlife.common.view.editor.MainSetmealView
+                android:id="@+id/msv"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="@dimen/dimen_20dp"
+                android:layout_marginRight="@dimen/dimen_20dp"
+                android:layout_marginTop="@dimen/dimen_10dp"
+                android:visibility="gone" />
+
+            <com.shian.shianlife.common.view.editor.FuneralSetmealView
+                android:id="@+id/fsv"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="@dimen/dimen_20dp"
+                android:layout_marginRight="@dimen/dimen_20dp"
+                android:layout_marginTop="@dimen/dimen_40dp" />
 
             <TextView
-                android:id="@+id/tv_total"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:text="￥0"
-                android:textColor="@color/red"
-                android:textSize="@dimen/txtsize_28sp" />
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_20dp"
+                android:background="@color/zhy_backgroud_1" />
+
+            <com.shian.shianlife.common.view.editor.CemeterySetmealView
+                android:id="@+id/csv"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="@dimen/dimen_20dp"
+                android:layout_marginRight="@dimen/dimen_20dp"
+                android:layout_marginTop="@dimen/dimen_40dp"
+                android:visibility="gone" />
+
+            <com.shian.shianlife.common.view.editor.AddedSetmealOtherView
+                android:id="@+id/asvother"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"></com.shian.shianlife.common.view.editor.AddedSetmealOtherView>
+
+            <com.shian.shianlife.common.view.order.AddedSetmealView
+                android:id="@+id/asv"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="@dimen/dimen_20dp"
+                android:layout_marginRight="@dimen/dimen_20dp"
+                android:layout_marginTop="@dimen/dimen_40dp" />
+
+
         </LinearLayout>
+    </ScrollView>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dimen_96dp"
+        android:layout_alignParentBottom="true"
+        android:background="#cc6d8780"
+        android:orientation="horizontal">
 
         <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/dimen_32dp"
+            android:text="￥"
+            android:textColor="@color/white"
+            android:textSize="@dimen/dimen_24dp"
+            android:textStyle="bold" />
 
+        <TextView
+            android:id="@+id/tv_total"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:text="0"
+            android:textColor="@color/white"
+            android:textSize="@dimen/dimen_32dp"
+            android:textStyle="bold" />
+
+        <TextView
             android:id="@+id/tv_edit_commit"
             android:layout_width="@dimen/dimen_200dp"
-            android:layout_height="@dimen/dimen_60dp"
-            android:layout_gravity="bottom|center"
-            android:layout_margin="@dimen/dimen_40dp"
-            android:background="@drawable/ic_home_reg"
+            android:layout_height="@dimen/dimen_66dp"
+            android:layout_gravity="center"
+            android:layout_marginRight="@dimen/dimen_32dp"
+            android:background="@drawable/zhy_button_state_item_yellow"
             android:gravity="center"
             android:text="确认提交"
-            android:textColor="@color/text_color"
-            android:textSize="@dimen/txtsize_32sp" />
+            android:textColor="@color/white"
+            android:textSize="@dimen/dimen_32dp" />
     </LinearLayout>
-
-</ScrollView>
+</RelativeLayout>
