--- a/app/src/main/res/layout/item_productdetail.xml
+++ b/app/src/main/res/layout/item_productdetail.xml
@@ -8,7 +8,7 @@
         android:id="@+id/tv_name"
         style="@style/order_detail_productTextStyle"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/dimen_32dp"
         android:layout_weight="1"
         android:text="名称：" />
 
@@ -16,7 +16,7 @@
         android:id="@+id/tv_num"
         style="@style/order_detail_productTextStyle"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/dimen_32dp"
         android:layout_weight="1"
         android:text="数量：" />
 
@@ -24,7 +24,7 @@
         android:id="@+id/tv_totalprice"
         style="@style/order_detail_productTextStyle"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/dimen_32dp"
         android:layout_weight="1"
         android:text="小计：" />
 
