--- a/app/src/main/res/layout/view_addeddetail.xml
+++ b/app/src/main/res/layout/view_addeddetail.xml
@@ -2,44 +2,52 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/tv_visitNum"
         style="@style/order_detail_projectTextStyle"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="增值业务项目"
-        android:textColor="@color/blackgroundmain" />
+        android:layout_height="@dimen/dimen_80dp"
+        android:text="增值业务项目" />
 
-    <View
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="@dimen/dimen_1dp"
-        android:background="@color/light_gray_item_shua_textcolor" />
+        android:layout_marginLeft="@dimen/dimen_32dp"
+        android:background="@color/zhy_line_3" />
+
 
     <LinearLayout
         android:id="@+id/ll_xx_4"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="right"
+        android:layout_height="@dimen/dimen_80dp"
+        android:gravity="center"
         android:orientation="horizontal">
 
         <TextView
             style="@style/order_detail_ctgTextStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="合计：" />
+            android:layout_marginLeft="@dimen/dimen_32dp"
+            android:layout_weight="1"
+            android:text="合计："
+            android:textSize="@dimen/dimen_24dp" />
 
         <TextView
             android:id="@+id/tv_totalprice"
             style="@style/order_detail_ctgTextStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="@dimen/dimen_32dp"
             android:text="￥"
-            android:textColor="@color/blackgroundmain" />
+            android:textColor="@color/dimgray"
+            android:textStyle="bold" />
     </LinearLayout>
+
     <View
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dimen_20dp"
-        android:background="@color/white" />
+        android:layout_height="@dimen/dimen_16dp"
+        android:background="@color/zhy_backgroud_1" />
 </LinearLayout>
