--- a/app/src/main/res/layout/view_mainsetmealother_listview_items_items.xml
+++ b/app/src/main/res/layout/view_mainsetmealother_listview_items_items.xml
@@ -9,82 +9,84 @@
         android:id="@+id/ll_bottom"
         android:layout_width="@dimen/dimen_400dp"
         android:layout_height="match_parent"
-        android:weightSum="2"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:weightSum="2">
 
         <TextView
             android:id="@+id/tv_detail"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="center"
             android:background="@color/cemetery_titlecolor"
+            android:gravity="center"
             android:text="详情"
-            android:textColor="@color/black_item_shua_textcolor"
-            android:textSize="@dimen/dimen_22dp" />
+            android:textColor="@color/dimgray"
+            android:textSize="@dimen/dimen_24dp" />
 
         <TextView
             android:id="@+id/tv_delete"
-            android:gravity="center"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@color/blackgroundmain"
+            android:background="@color/zhy_text_color_1"
+            android:gravity="center"
             android:text="删除"
             android:textColor="@color/white"
-            android:textSize="@dimen/dimen_22dp" />
+            android:textSize="@dimen/dimen_24dp" />
     </LinearLayout>
 
     <LinearLayout
-        android:background="@color/main_blackground"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/zhy_line_4"
         android:orientation="vertical">
 
         <LinearLayout
-            android:layout_marginLeft="@dimen/dimen_20dp"
-            android:layout_marginRight="@dimen/dimen_20dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/dimen_32dp"
+            android:layout_marginLeft="@dimen/dimen_32dp"
+            android:layout_marginRight="@dimen/dimen_32dp"
             android:gravity="right"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/tv_name"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/gray_text"
-                android:textSize="@dimen/dimen_26dp" />
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:textColor="@color/dimgray"
+                android:textSize="@dimen/dimen_24dp" />
 
-            <ImageView
-                android:id="@+id/iv_detail"
-                android:layout_width="@dimen/dimen_22dp"
-                android:layout_height="@dimen/dimen_26dp"
-                android:layout_gravity="center"
-                android:layout_marginLeft="@dimen/dimen_10dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/zhy_sku_detail" />
+            <!--<ImageView-->
+            <!--android:id="@+id/iv_detail"-->
+            <!--android:layout_width="@dimen/dimen_22dp"-->
+            <!--android:layout_height="@dimen/dimen_26dp"-->
+            <!--android:layout_gravity="center"-->
+            <!--android:layout_marginLeft="@dimen/dimen_10dp"-->
+            <!--android:scaleType="fitCenter"-->
+            <!--android:src="@drawable/zhy_sku_detail" />-->
         </LinearLayout>
 
         <TextView
-            android:layout_marginLeft="@dimen/dimen_20dp"
-            android:layout_marginRight="@dimen/dimen_20dp"
             android:id="@+id/tv_num"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/dimen_32dp"
             android:layout_gravity="right"
-            android:textColor="@color/gray_text"
-            android:textSize="@dimen/dimen_26dp" />
+            android:layout_marginLeft="@dimen/dimen_32dp"
+            android:layout_marginRight="@dimen/dimen_32dp"
+            android:gravity="center_vertical"
+            android:textColor="@color/dimgray"
+            android:textSize="@dimen/dimen_24dp" />
 
         <TextView
-            android:layout_marginLeft="@dimen/dimen_20dp"
-            android:layout_marginRight="@dimen/dimen_20dp"
             android:id="@+id/tv_money"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/dimen_32dp"
             android:layout_gravity="right"
-            android:textColor="@color/gray_text"
-            android:textSize="@dimen/dimen_26dp" />
+            android:layout_marginLeft="@dimen/dimen_32dp"
+            android:layout_marginRight="@dimen/dimen_32dp"
+            android:textColor="@color/dimgray"
+            android:textSize="@dimen/dimen_24dp" />
     </LinearLayout>
 
 
