--- a/app/src/main/res/layout/view_moneydetail.xml
+++ b/app/src/main/res/layout/view_moneydetail.xml
@@ -2,55 +2,60 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="20dp"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/dimen_80dp"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/tv_visitNum"
             style="@style/order_detail_projectTextStyle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="费用情况"
-            android:textColor="@color/blackgroundmain" />
+            android:layout_height="@dimen/dimen_80dp"
+            android:text="费用情况" />
 
 
     </LinearLayout>
 
-    <View
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="@dimen/dimen_1dp"
-        android:background="@color/light_gray_item_shua_textcolor" />
+        android:layout_marginLeft="@dimen/dimen_32dp"
+        android:background="@color/zhy_line_3" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/dimen_80dp"
+        android:gravity="center_vertical"
         android:orientation="horizontal">
 
         <TextView
             style="@style/order_detail_ctgTextStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/dimen_75dp"
-            android:text="总金额：" />
+            android:layout_marginLeft="@dimen/dimen_32dp"
+            android:layout_weight="1"
+            android:text="总金额" />
 
         <TextView
             android:id="@+id/tv_totalAmount"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="@dimen/dimen_32dp"
             android:gravity="center"
             android:text="未知"
-            android:textColor="@color/blackgroundmain" />
+            android:textColor="@color/dimgray"
+            android:textStyle="bold" />
     </LinearLayout>
 
-    <View
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="@dimen/dimen_1dp"
-        android:background="@color/light_gray_item_shua_textcolor" />
+        android:layout_marginLeft="@dimen/dimen_32dp"
+        android:background="@color/zhy_line_3" />
 
 
     <LinearLayout
@@ -62,44 +67,50 @@
             android:id="@+id/textView2"
             style="@style/order_detail_ctgTextStyle"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
+            android:layout_height="@dimen/dimen_80dp"
             android:layout_gravity="center_vertical"
-            android:layout_weight="1"
             android:text="定金"
-            android:textSize="@dimen/txtsize_30sp" />
+            android:textSize="@dimen/dimen_24dp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tv_prepayAmount"
             style="@style/order_detail_ctgTextStyle"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:text="已支付：" />
+            android:layout_height="@dimen/dimen_48dp"
+            android:text="已支付："
+            android:textSize="@dimen/dimen_24dp" />
 
 
         <TextView
             android:id="@+id/tv_prepayEndTime"
             style="@style/order_detail_ctgTextStyle"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:text="支付时间：" />
+            android:layout_height="@dimen/dimen_48dp"
+            android:text="支付时间："
+            android:textSize="@dimen/dimen_24dp" />
     </LinearLayout>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dimen_1dp"
+        android:layout_marginLeft="@dimen/dimen_32dp"
+        android:background="@color/zhy_line_3" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/dimen_24dp"
         android:orientation="vertical">
 
         <TextView
             style="@style/order_detail_ctgTextStyle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/dimen_80dp"
             android:layout_gravity="center_vertical"
             android:text="余款"
-            android:textColor="@color/black"
-            android:textSize="@dimen/txtsize_30sp" />
+            android:textSize="@dimen/dimen_24dp"
+            android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -110,7 +121,7 @@
                 android:id="@+id/tv_refundMoney"
                 style="@style/order_detail_ctgTextStyle"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/dimen_48dp"
                 android:layout_weight="1"
                 android:text="退款金额：" />
 
@@ -118,12 +129,11 @@
                 android:id="@+id/tv_refund"
                 android:layout_width="@dimen/dimen_120dp"
                 android:layout_height="@dimen/dimen_40dp"
-                android:layout_marginRight="@dimen/dimen_10dp"
-                android:layout_marginLeft="@dimen/dimen_250dp"
-                android:background="@drawable/customdetail_detail"
+                android:layout_marginRight="@dimen/dimen_32dp"
+                android:background="@drawable/zhy_button_state_2"
                 android:gravity="center"
                 android:text="退款详情"
-                android:textColor="@color/text_color" />
+                android:textColor="@color/zhy_text_color_1" />
         </LinearLayout>
 
 
@@ -131,8 +141,7 @@
             android:id="@+id/tv_restPayAmount"
             style="@style/order_detail_ctgTextStyle"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="@dimen/dimen_48dp"
             android:text="应支付：" />
 
 
@@ -140,8 +149,7 @@
             android:id="@+id/tv"
             style="@style/order_detail_ctgTextStyle"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="@dimen/dimen_48dp"
             android:text="实际支付：" />
 
 
@@ -149,8 +157,7 @@
             android:id="@+id/tv_restPayEndTime"
             style="@style/order_detail_ctgTextStyle"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="@dimen/dimen_48dp"
             android:text="支付时间：" />
 
 
@@ -158,8 +165,7 @@
             android:id="@+id/tv_restPayeeName"
             style="@style/order_detail_ctgTextStyle"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="@dimen/dimen_48dp"
             android:text="余款收款员：" />
 
 
@@ -167,21 +173,15 @@
             android:id="@+id/tv_restPayeePhone"
             style="@style/order_detail_ctgTextStyle"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="@dimen/dimen_48dp"
             android:text="联系方式：" />
     </LinearLayout>
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dimen_1dp"
-        android:background="@drawable/bg_line" />
+        android:layout_height="@dimen/dimen_16dp"
+        android:background="@color/zhy_backgroud_1" />
 
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/dimen_1dp"
-        android:background="@drawable/bg_line" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -189,20 +189,32 @@
         android:orientation="vertical">
 
         <TextView
-            style="@style/order_detail_ctgTextStyle"
+            style="@style/order_detail_projectTextStyle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/dimen_80dp"
             android:layout_gravity="center_vertical"
-            android:text="客户签字"
-            android:textColor="@android:color/black"
-            android:textSize="@dimen/txtsize_30sp" />
+            android:text="客户签字" />
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dimen_1dp"
+            android:layout_marginLeft="@dimen/dimen_32dp"
+            android:background="@color/zhy_line_3" />
 
         <ImageView
             android:id="@+id/iv_signUrl"
             android:layout_width="match_parent"
+            android:layout_marginTop="@dimen/dimen_16dp"
+            android:layout_marginBottom="@dimen/dimen_16dp"
+            android:layout_marginLeft="@dimen/dimen_32dp"
+            android:layout_marginRight="@dimen/dimen_32dp"
             android:layout_height="@dimen/dimen_200dp"
+            android:background="@color/gray_common"
             android:scaleType="fitCenter" />
     </LinearLayout>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dimen_16dp"
+        android:background="@color/zhy_backgroud_1" />
 </LinearLayout>
