--- a/app/src/main/res/layout/view_moneydetailrefund.xml
+++ b/app/src/main/res/layout/view_moneydetailrefund.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="20dp"
+    android:background="@color/white"
     android:orientation="vertical">
 
 
@@ -21,7 +21,7 @@
                 android:id="@+id/tv_refund_yske"
                 style="@style/order_detail_ctgTextStyle"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/dimen_80dp"
                 android:text="总应收款：" />
 
 
@@ -29,8 +29,7 @@
                 android:id="@+id/tv_prepayAmount"
                 style="@style/order_detail_ctgTextStyle"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
+                android:layout_height="@dimen/dimen_80dp"
                 android:text="支付金额：" />
 
 
@@ -42,14 +41,14 @@
                 <TextView
                     style="@style/order_detail_ctgTextStyle"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/dimen_80dp"
                     android:text="退款金额：" />
 
                 <TextView
                     android:id="@+id/tv_prepayEndTime"
                     style="@style/order_detail_ctgTextStyle"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/dimen_80dp"
                     android:text="" />
             </LinearLayout>
 
@@ -58,9 +57,7 @@
                 android:id="@+id/tv_yfje"
                 style="@style/order_detail_ctgTextStyle"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-
+                android:layout_height="@dimen/dimen_80dp"
                 android:text="应支付金额：" />
         </LinearLayout>
     </LinearLayout>
@@ -69,9 +66,9 @@
         android:id="@+id/tv_sure"
         android:layout_width="@dimen/dimen_120dp"
         android:layout_height="@dimen/dimen_40dp"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_marginRight="20dp"
-        android:layout_marginTop="100dp"
         android:background="@drawable/customdetail_detail"
         android:gravity="center"
         android:text="提交确认"
