--- a/app/src/main/res/layout/view_prereadydetailinfo.xml
+++ b/app/src/main/res/layout/view_prereadydetailinfo.xml
@@ -2,18 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical" >
 
     <TextView
         style="@style/customer_detail_titleTextStyle"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/dimen_80dp"
         android:text="预备信息" />
 
-    <View
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/gray_common" />
+        android:layout_height="@dimen/dimen_1dp"
+        android:layout_marginLeft="@dimen/dimen_32dp"
+        android:background="@color/zhy_line_3" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,7 +25,7 @@
         <TextView
             style="@style/customer_detail_title2TextStyle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/dimen_48dp"
             android:text="附件：" />
 
         <LinearLayout
@@ -46,7 +48,7 @@
         <TextView
             style="@style/customer_detail_title2TextStyle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/dimen_48dp"
             android:text="图片：" />
 
         <LinearLayout
@@ -69,7 +71,7 @@
         <TextView
             style="@style/customer_detail_title2TextStyle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/dimen_48dp"
             android:text="完成情况：" />
 
         <TextView
@@ -80,11 +82,8 @@
             android:text="未知" />
     </LinearLayout>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:layout_marginLeft="@dimen/dimen_25dp"
-        android:layout_marginRight="@dimen/dimen_25dp"
-        android:background="@color/gray_common" />
+<TextView
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/dimen_24dp" />
 
 </LinearLayout>
