--- a/app/src/main/res/values/widget.xml
+++ b/app/src/main/res/values/widget.xml
@@ -62,6 +62,8 @@
 
     <style name="order_detail_ctgTextStyle" parent="@android:style/Widget.TextView">
         <item name="android:textColor">#696969</item>
+        <item name="android:layout_marginLeft">@dimen/dimen_32dp</item>
+        <item name="android:gravity">center_vertical</item>
         <item name="android:textSize">@dimen/txtsize_26sp</item>
     </style>
 
@@ -82,31 +84,27 @@
     </style>
 
     <style name="customer_detail_titleTextStyle" parent="@android:style/Widget.TextView">
-
-        <item name="android:drawablePadding">@dimen/dimen_10dp</item>
-        <item name="android:paddingLeft">@dimen/dimen_20dp</item>
-        <item name="android:paddingBottom">@dimen/dimen_15dp</item>
-        <item name="android:textColor">@color/blackgroundmain</item>
-        <item name="android:textSize">@dimen/txtsize_32sp</item>
+        <item name="android:layout_marginLeft">@dimen/dimen_32dp</item>
+        <item name="android:layout_marginRight">@dimen/dimen_32dp</item>
+        <item name="android:textColor">@color/zhy_text_color_1</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:textSize">@dimen/dimen_32dp</item>
     </style>
 
     <style name="customer_detail_title2TextStyle" parent="@android:style/Widget.TextView">
-        <item name="android:textColor">#666666</item>
-        <item name="android:textSize">@dimen/txtsize_30sp</item>
+        <item name="android:textColor">#696969</item>
+        <item name="android:textSize">@dimen/dimen_24dp</item>
         <item name="android:minEms">6</item>
-        <item name="android:paddingTop">@dimen/dimen_25dp</item>
-        <item name="android:paddingBottom">@dimen/dimen_25dp</item>
-        <item name="android:paddingLeft">@dimen/dimen_25dp</item>
+        <item name="android:layout_marginLeft">@dimen/dimen_32dp</item>
         <item name="android:layout_gravity">center_vertical</item>
+        <item name="android:gravity">center_vertical</item>
     </style>
 
     <style name="customer_detail_contentTextStyle" parent="@android:style/Widget.TextView">
-        <item name="android:textColor">#666666</item>
-        <item name="android:textSize">@dimen/txtsize_30sp</item>
-        <item name="android:paddingTop">@dimen/dimen_25dp</item>
-        <item name="android:paddingBottom">@dimen/dimen_25dp</item>
-        <item name="android:paddingRight">@dimen/dimen_25dp</item>
+        <item name="android:textColor">#696969</item>
+        <item name="android:textSize">@dimen/dimen_24dp</item>
         <item name="android:layout_gravity">center_vertical</item>
+        <item name="android:gravity">center_vertical</item>
     </style>
 
 </resources>
