--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -55,6 +55,7 @@
     <color name="zhy_text_color_9">#6d8780</color>
     <color name="zhy_text_color_10">#ffa592</color>
     <color name="zhy_text_color_11">#6e6e6e</color>
+    <color name="zhy_text_color_12">#929191</color>
     <color name="zhy_title_color_1">#3baf92</color>
     <color name="zhy_rb_check_1">#ededed</color>
     <color name="zhy_rb_uncheck_1">#dedede</color>
