--- a/app/src/main/res/layout/view_customdetail.xml
+++ b/app/src/main/res/layout/view_customdetail.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/white"
     android:orientation="vertical">
 
 
@@ -36,6 +37,7 @@
     </LinearLayout>
 
     <View
+        android:background="@color/zhy_backgroud_1"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dimen_16dp" />
 
