--- a/app/src/main/res/layout/view_addedsetmealother.xml
+++ b/app/src/main/res/layout/view_addedsetmealother.xml
@@ -59,6 +59,9 @@
 
     <com.shian.shianlife.view.ScrollListView
         android:id="@+id/listview"
+        android:divider="@null"
+        android:dividerHeight="@dimen/dimen_0dp"
+        android:scrollbars="none"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"></com.shian.shianlife.view.ScrollListView>
 
@@ -73,7 +76,7 @@
             android:layout_height="@dimen/dimen_66dp"
             android:gravity="center_vertical|right"
             android:paddingRight="@dimen/dimen_32dp"
-            android:text="· 点击查看详情或删除商品"
+            android:text="· 左滑查看详情或删除商品"
             android:textColor="@color/dimgray"
             android:textSize="@dimen/dimen_24dp"
             android:textStyle="bold" />
