--- a/app/src/main/res/layout/view_funeralsetmealother.xml
+++ b/app/src/main/res/layout/view_funeralsetmealother.xml
@@ -11,7 +11,6 @@
         android:layout_height="@dimen/dimen_80dp"
         android:gravity="center_vertical"
         android:paddingLeft="@dimen/dimen_32dp"
-        android:text="殡仪馆套餐"
         android:textColor="@color/zhy_text_color_1"
         android:textSize="@dimen/dimen_28dp" />
 
@@ -35,16 +34,18 @@
             android:textColor="@color/dimgray"
             android:textSize="@dimen/dimen_24dp" />
 
-        <TextView
+        <Spinner
             android:id="@+id/tv_setmealFuneralName"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:background="@null"
             android:gravity="center_vertical"
             android:textColor="@color/dimgray"
             android:textSize="@dimen/dimen_24dp" />
 
         <Button
+            android:id="@+id/bt_changesetmeal"
             android:layout_width="@dimen/dimen_120dp"
             android:layout_height="@dimen/dimen_49dp"
             android:layout_marginRight="@dimen/dimen_32dp"
