--- a/app/src/main/res/layout/view_mainsetmealother.xml
+++ b/app/src/main/res/layout/view_mainsetmealother.xml
@@ -78,7 +78,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/dimen_1dp"
-        android:background="@color/zhy_backgroud_1"
+        android:background="@color/zhy_line_4"
         android:orientation="horizontal">
 
         <TextView
